update base on golancl-v2
