# docs/swagger.yaml
@@ -1,23 +1,4 @@
-basePath: /api/v1
 definitions:
-  dto.Movie:
-    properties:
-      description:
-        type: string
-      id:
-        type: integer
-      release_year:
-        type: string
-      title:
-        type: string
-    type: object
-  dto.MovieListResponse:
-    properties:
-      movies:
-        items:
-          $ref: '#/definitions/dto.Movie'
-        type: array
-    type: object
   response.Response-bool:
     properties:
       data:
@@ -52,83 +33,6 @@ info:
   title: Swagger
   version: "1.0"
 paths:
-  /api/v3/content/v2/movies:
-    get:
-      consumes:
-      - application/json
-      description: Fetch a list of movies
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.MovieListResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Response-string'
-      summary: Get list of movies
-      tags:
-      - Movies
-  /api/v3/content/v2/movies/{movie_id}:
-    get:
-      consumes:
-      - application/json
-      description: Fetch a movie by its ID
-      parameters:
-      - description: Movie ID
-        in: path
-        name: movie_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.Movie'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.Response-string'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Response-string'
-      summary: Get a movie by ID
-      tags:
-      - Movies
-  /api/v3/content/v2/movies/{movie_id}/similar:
-    get:
-      consumes:
-      - application/json
-      description: Fetch similar movies based on a given movie ID
-      parameters:
-      - description: Movie ID
-        in: path
-        name: movie_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.MovieListResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.Response-string'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Response-string'
-      summary: Get similar movies
-      tags:
-      - Movies
   /healthz/liveness:
     get:
       consumes:
